--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Anton', sans-serif;
 }
 main{
     flex-grow: 1;
+}
+.fondoAzul{
+    background: rgb(200, 108, 236);
+}
+.tamanioLetraHora{
+    font-size: 100px;
+}
+.tamanioLetraSegAmPm{
+    font-size: 35px;
 }
